syntax = "proto3";

package event_tag;

option go_package = "github.com/MingPV/EventService/proto/event_tag_pb";

message EventTag {
	uint32 event_id = 1;
  uint32 tag_id = 2;
	string created_at = 3;
	string updated_at = 4;
}

message CreateEventTagRequest {
  uint32 event_id = 1;
	uint32 tag_id = 2;
}

message CreateEventTagResponse {
  EventTag event_tag = 1;
}

message FindByEventAndTagIDRequest {
  uint32 event_id = 1;
	uint32 tag_id = 2;
}

message FindByEventAndTagIDResponse {
  EventTag event_tag = 1;
}

message FindByEventIDRequest {
  uint32 event_id = 1;
}

message FindByEventIDResponse {
  repeated EventTag event_tags = 1;
}

message FindByTagIDRequest {
  uint32 tag_id = 1;
}

message FindByTagIDResponse {
  repeated EventTag event_tags = 1;
}

message FindAllEventTagsRequest {}

message FindAllEventTagsResponse {
  repeated EventTag event_tags = 1;
}

message DeleteEventTagRequest {
  uint32 event_id = 1;
	uint32 tag_id = 2;
}

message DeleteEventTagResponse {
  string message = 1;
}

service EventTagService {
  rpc CreateEventTag(CreateEventTagRequest) returns (CreateEventTagResponse);
  rpc FindByEventAndTagID(FindByEventAndTagIDRequest) returns (FindByEventAndTagIDResponse);
  rpc FindByEventID(FindByEventIDRequest) returns (FindByEventIDResponse);
  rpc FindByTagID(FindByTagIDRequest) returns (FindByTagIDResponse);
  rpc FindAllEventTags(FindAllEventTagsRequest) returns (FindAllEventTagsResponse);
  rpc DeleteEventTag(DeleteEventTagRequest) returns (DeleteEventTagResponse);
}
